[gd_scene load_steps=24 format=3 uid="uid://c1wbtif42bpc2"]

[ext_resource type="Texture2D" uid="uid://cafccxcys4ksr" path="res://Scene/Start/startBG.png" id="1_3qiyi"]
[ext_resource type="Script" uid="uid://bjn0sogd7hnq6" path="res://Scene/Start/start.gd" id="1_rr16x"]
[ext_resource type="Texture2D" uid="uid://c2fim6fjvyf7" path="res://Scene/Player/粉红麻糬.png" id="2_1ek2h"]
[ext_resource type="AudioStream" uid="uid://ck3ag3ub112hm" path="res://Scene/Level_1/Image/奖励.mp3" id="4_6ug2b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ek2h"]
bg_color = Color(0.878378, 0.338247, 0.527823, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rr16x"]
bg_color = Color(0.979899, 0.856813, 0.861112, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ug2b"]
bg_color = Color(0.878378, 0.338247, 0.527823, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc4j0"]
bg_color = Color(0.960784, 0.721569, 0.733333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(1, 1, 1, 0.694118)
shadow_size = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_uf6ui"]
atlas = ExtResource("2_1ek2h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_702gu"]
atlas = ExtResource("2_1ek2h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_egjom"]
atlas = ExtResource("2_1ek2h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_klcp3"]
atlas = ExtResource("2_1ek2h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhv0t"]
atlas = ExtResource("2_1ek2h")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpply"]
atlas = ExtResource("2_1ek2h")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvco6"]
atlas = ExtResource("2_1ek2h")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mslq"]
atlas = ExtResource("2_1ek2h")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr1l6"]
atlas = ExtResource("2_1ek2h")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwhya"]
atlas = ExtResource("2_1ek2h")
region = Rect2(256, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rr16x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf6ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_702gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egjom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klcp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhv0t")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpply")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvco6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mslq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr1l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwhya")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l71fu"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)

[sub_resource type="Animation" id="Animation_6ug2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rr16x"]
resource_name = "change"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ug2b"]
_data = {
&"RESET": SubResource("Animation_6ug2b"),
&"change": SubResource("Animation_rr16x")
}

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rr16x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3qiyi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 90.0
offset_right = 100.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.141176)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_1ek2h")
theme_override_styles/hover = SubResource("StyleBoxFlat_rr16x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ug2b")
theme_override_styles/normal = SubResource("StyleBoxFlat_uc4j0")
text = "START"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.141176)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_1ek2h")
theme_override_styles/hover = SubResource("StyleBoxFlat_rr16x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ug2b")
theme_override_styles/normal = SubResource("StyleBoxFlat_uc4j0")
text = "EXIT"

[node name="Mashu" type="AnimatedSprite2D" parent="."]
process_mode = 3
position = Vector2(472, 657)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_rr16x")
animation = &"Run"
autoplay = "Run"
frame_progress = 0.380394
flip_h = true

[node name="ChangePanel" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l71fu")

[node name="Ani" type="AnimationPlayer" parent="ChangePanel"]
libraries = {
&"": SubResource("AnimationLibrary_6ug2b")
}

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6ug2b")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
